--- a/bank-external/pom.xml
+++ b/bank-external/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>external</artifactId>
+    <artifactId>bank-external</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
