--- a/bank-application/pom.xml
+++ b/bank-application/pom.xml
@@ -21,6 +21,22 @@
             <groupId>com.wry</groupId>
             <artifactId>bank-domain</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.wry</groupId>
+            <artifactId>bank-external</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.wry</groupId>
+            <artifactId>bank-messaging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.wry</groupId>
+            <artifactId>bank-persistence</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
