--- a/bank-domain/pom.xml
+++ b/bank-domain/pom.xml
@@ -21,6 +21,11 @@
             <groupId>com.wry</groupId>
             <artifactId>bank-types</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
