--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+
+
     <groupId>com.wry</groupId>
     <artifactId>dddbank</artifactId>
     <packaging>pom</packaging>
@@ -20,6 +22,13 @@
         <module>bank-external</module>
     </modules>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.1.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
@@ -27,11 +36,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-parent</artifactId>
-                <version>2.2.6.RELEASE</version>
-            </dependency>
             <dependency>
                 <groupId>com.wry</groupId>
                 <artifactId>bank-types</artifactId>
@@ -50,6 +54,21 @@
             <dependency>
                 <groupId>com.wry</groupId>
                 <artifactId>bank-web</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.wry</groupId>
+                <artifactId>bank-external</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.wry</groupId>
+                <artifactId>bank-messaging</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.wry</groupId>
+                <artifactId>bank-persistence</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
